--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "bino"
+name = "tavo"
 version = "0.1.0"
 authors = [
   { name="Hallel", email="admin@cyberwizdev.com.ng" },
@@ -40,11 +40,11 @@ dependencies = [
 ]
 
 [project.scripts]
-bino = "bino_cli.main:main"
+tavo = "bino_cli.main:main"
 
 [project.urls]
-"Homepage" = "https://github.com/charis/bino-python"
-"Bug Tracker" = "https://github.com/charis/bino-python/issues"
+"Homepage" = "https://github.com/charis/tavo-python"
+"Bug Tracker" = "https://github.com/charis/tavo-python/issues"
 
 [tool.setuptools.packages.find]
 include = ["bino_cli", "bino_cli.*", "bino_core", "bino_core.*"]
