Refactors project to Tavo framework
Renames the project from "Bino" to "Tavo" throughout the codebase, including documentation, examples, and internal references.

This change updates project metadata, documentation, and code references to reflect the new name and align with the project's evolving identity and features.

--- a/src/rust_bundler/Cargo.toml
+++ b/src/rust_bundler/Cargo.toml
@@ -2,8 +2,8 @@
 name = "rust_bundler"
 version = "0.1.0"
 edition = "2021"
-description = "SWC-based bundler for Bino framework"
-authors = ["Bino Framework Team"]
+description = "SWC-based bundler for Tavo framework"
+authors = ["Tavo Framework Team"]
 
 [[bin]]
 name = "rust_bundler"
