feat: Implement build manifest and asset management
- Added `BuildManifest`, `AssetInfo`, and `ChunkInfo` structs for managing client and server assets.
- Implemented methods for adding routes, retrieving assets, and filtering CSS/JS files.
- Created `SwcBundler` for building client and server bundles, including route discovery and SSR rendering.
- Introduced file watcher functionality for development mode to monitor changes in project directories.
- Developed middleware for handling HMR, request logging, and response time tracking in the Tavo application.
- Implemented file-based routing for API and React SSR routes, discovering routes from the filesystem.
- Set up the main entry point for the ASGI application with proper routing and middleware integration.
- Added requirements for the Tavo framework in the project template.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,19 +105,19 @@ packages = [
     "tavo.core.hmr",
     "tavo.core.orm", 
     "tavo.core.router",
-    "tavo.templates",
-    "tavo.templates.api",
-    "tavo.templates.api.models",
-    "tavo.templates.api.routes", 
-    "tavo.templates.app",
-    "tavo.templates.app.components"
+    "tavo.templates.default",
+    "tavo.templates.default.api",
+    "tavo.templates.default.api.models",
+    "tavo.templates.default.api.routes", 
+    "tavo.templates.default.app",
+    "tavo.templates.default.app.components"
 ]
 
 # Include template files
 [tool.setuptools.package-data]
-"tavo.templates" = ["**/*"]
-"tavo.templates.api" = ["**/*"]  
-"tavo.templates.app" = ["**/*"]
+"tavo.templates.default" = ["**/*"]
+"tavo.templates.default.api" = ["**/*"]  
+"tavo.templates.default.app" = ["**/*"]
 
 # Make sure to include non-Python files
 [tool.setuptools.package-dir]
