--- a/rust_bundler/Cargo.toml
+++ b/rust_bundler/Cargo.toml
@@ -1,50 +1,31 @@
 [package]
-name = "rust_bundler"
+name = "ssr-bundler"
 version = "0.1.0"
 edition = "2021"
-description = "SWC-based bundler for Tavo framework"
-authors = ["Tavo Framework Team"]
 
 [[bin]]
-name = "rust_bundler"
+name = "ssr-bundler"
 path = "src/main.rs"
 
 [dependencies]
-# SWC core for JavaScript/TypeScript compilation
-swc_core = "0.90"
-swc_common = "0.33"
-swc_ecma_parser = "0.145"
-swc_ecma_transforms = "0.230"
-swc_ecma_codegen = "0.150"
+swc_core = { version = "38.0.0", features = [
+    "ecma_ast",
+    "ecma_parser", 
+    "ecma_transforms",
+    "ecma_transforms_react",
+    "ecma_transforms_typescript",
+    "ecma_codegen",
+    "common",
+    "ecma_visit"
+] }
+thiserror = "1.0"
+swc_common = { version = "14.0.3", features = ["sync"] }
 
-# CLI and async runtime
-clap = { version = "4.4", features = ["derive"] }
-tokio = { version = "1.35", features = ["full"] }
-
-# File system operations
-walkdir = "2.4"
-notify = "6.1"
-
-# JSON handling
+# Other dependencies
+tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-# Error handling
+clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
-thiserror = "1.0"
-
-# Logging
-tracing = "0.1"
-tracing-subscriber = "0.3"
-
-# Path utilities
-pathdiff = "0.2"
-
-[dev-dependencies]
-tempfile = "3.8"
-assert_cmd = "2.0"
-
-[profile.release]
-lto = true
-codegen-units = 1
-panic = "abort"
+walkdir = "2.3"
+regex = "1.5"
