--- a/rust_bundler/Cargo.toml
+++ b/rust_bundler/Cargo.toml
@@ -18,8 +18,8 @@ swc_core = { version = "38.0.0", features = [
     "common",
     "ecma_visit"
 ] }
-thiserror = "1.0"
-swc_common = { version = "14.0.3", features = ["sync"] }
+thiserror = "2.0"
+swc_common = "14.0.3"
 
 # Other dependencies
 tokio = { version = "1.0", features = ["full"] }
