fix: change the working directory of rust_bundler in actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Build binary
-        working-directory: rust_bundler
+        working-directory: tavo/rust_bundler
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Upload artifact
