--- a/tavo/rust_bundler/Cargo.toml
+++ b/tavo/rust_bundler/Cargo.toml
@@ -39,3 +39,5 @@ regex = "1.5"
 
 # JavaScript runtime for SSR
 rquickjs = { version = "0.8", features = ["full"] }
+log = "0.4.28"
+env_logger = "0.11.8"
