--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "anyio>=4.10.0",
     "requests>=2.32.0",
+    "uvicorn>=0.25.0"
 ]
 
 [project.optional-dependencies]
