--- a/new_app/.gitignore
+++ b/new_app/.gitignore
@@ -1,4 +1,4 @@
-generator.py
+node_modules
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -8,7 +8,7 @@ __pycache__/
 # C extensions
 *.so
 
-# new_app
+new_app
 
 # Distribution / packaging
 .Python
@@ -29,6 +29,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.tavo
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -85,35 +86,6 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-
-node_modules
-*-lock.json
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
 
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
@@ -212,6 +184,3 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-
-# Test dirs
-migrations
