Add integration and resolver tests for Tavo bundler
- Implemented comprehensive integration tests for the compilation process, covering various scenarios including simple pages, layout composition, nested layouts, component imports, dynamic routes, and error handling.
- Added tests for the ImportResolver, ensuring proper route discovery, dynamic and catch-all routes, loading/error file handling, and import path resolution.
- Introduced utility functions for file operations, including atomic writes, JSON handling, and directory management.
- Enhanced error handling and logging throughout the resolver and bundler utilities.

--- a/new_app/.swcrc
+++ b/new_app/.swcrc
@@ -4,6 +4,10 @@
       "syntax": "typescript",
       "tsx": true
     },
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "transform": {
       "react": {
         "runtime": "automatic"
